<resources>
    <string name="app_name">TurfNow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_turf_bottom_navigation">TurfBottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_image">Welcome image</string>
    <string name="welcome_to_turf_now">Welcome To TURF NOW</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an acoount?</string>
    <string name="sign_up">Sign up</string>
    <string name="get_your_turf_game_on_sign_up_for_free_today">Get Your Turf Game On: Sign up for free today!</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile-Number</string>
    <string name="password_conditions">Password must contain at least:\n- 1 uppercase letter\n- 1 lowercase letter\n- 1 digit\n- 1 special character\n- be at least 8 characters long</string>
    <string name="text_validation_success">Text Validation Sucess</string>
    <string name="text_validation_error_email">Enter a valid e-mail Id</string>
    <string name="text_validation_error_min_pass_length">Enter atleast 6 characters</string>
    <string name="text_validation_error_max_pass_length">password length should be less than 12</string>
    <string name="text_validation_error_phone">Enter valid phone number</string>
    <string name="text_validation_error_empty_field">Enter Valid Data</string>
    <string name="text_validation_error_no_digit">password should contain atleast one digit</string>
    <string name="text_validation_error_no_letter">password should contain atleast one letter</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="search">Search</string>
    <string name="_5_0">5.0</string>
    <string name="location">location</string>
    <string name="turf_name">Turf_Name</string>
    <string name="bookable">Bookable</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="venue">Venue</string>
    <string name="category">category</string>
    <string name="game">Game</string>
    <string name="favourites">Favourites</string>
    <string name="my_account">My Account</string>
    <string name="all_location">All-location</string>
    <string name="kindly_choose_a_category_to_proceed_with_your_booking">Kindly choose a category to proceed with your booking</string>
    <string name="booking_sucess">Booking Success!</string>
    <string name="booking_success">Booking Success!</string>
    <string name="enjoy_your_game">Enjoy your Game</string>
    <string name="booking_history">Booking History</string>
    <string name="booking_history_text">Booking History</string>
    <string name="turf_name1">Turf_Name:</string>
    <string name="date">Date:</string>
    <string name="slots">Slots:</string>
    <string name="total_price">Total Price:</string>
    <string name="no_bookings_yet_pls_book_turf_to_enjoy">No Bookings Yet Pls Book Turf to Enjoy!!!</string>
    <string name="no_results_found">No Results Found!</string>
    <string name="ground_type">Ground Type:</string>
    <string name="basket_ball">Basket Ball</string>
    <string name="faq_s">Faq\'s</string>
    <string name="faq">FAQ\'s:</string>
    <string name="loading">Loading.....</string>

</resources>