<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="5dp">

    <ImageView
        android:id="@+id/turfImage"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:src="@drawable/turf1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:scaleType="centerCrop">

    </ImageView>
    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/white"
        android:minHeight="48sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turfNameText"
        app:layout_constraintLeft_toRightOf="@id/turfImage"
        app:layout_constraintHorizontal_bias="0.1">
    </TextView>
    <TextView
        android:id="@+id/turfNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/turf_name"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/turfImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintWidth_percent="0.47">

    </TextView>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bookable"
    android:layout_marginBottom="20dp"
    android:textColor="#4CAF50"
    android:textStyle="bold"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toRightOf="@id/turfImage"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.4">
</TextView>
<ImageView
    android:id="@+id/starImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/baseline_star_rate_24"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toRightOf="@id/turfImage"
    app:layout_constraintTop_toBottomOf="@id/locationText"
    app:layout_constraintHorizontal_bias="0.745"/>

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_0"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/starImage"
        app:layout_constraintLeft_toRightOf="@id/starImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/starImage"
        app:layout_constraintVertical_bias="0.6" />






</androidx.constraintlayout.widget.ConstraintLayout>