<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/black">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/loginImage"
        android:src="@drawable/sport"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.17"
        android:contentDescription="@string/welcome_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">
    </ImageView>

    <TextView
        android:id="@+id/loginPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_turf_now"
        android:textColor="#3D6BE3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.07">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLoginEmailID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPageTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.850"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutLoginEmailID"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.850"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/sign_in"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutLoginPassword"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.30">

    </Button>

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/noAccountText"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.872"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintBaseline_toBaselineOf="@id/noAccountText">
    </TextView>
    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="5dp"
        android:minHeight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutLoginPassword"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>