<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="signupViewModel"
            type="com.example.turfnow.ui.signup.SignUpViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.signup.SignupFragment">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/loginImage"
        android:src="@drawable/sport"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintBottom_toTopOf="@+id/signupText"
        android:contentDescription="@string/welcome_image">
    </ImageView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_your_turf_game_on_sign_up_for_free_today"
        app:layout_constraintTop_toTopOf="@id/loginImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toTopOf ="@id/inputLayout_name"
        app:layout_constraintVertical_bias="0.8"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#3D6BE3"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintWidth_percent="0.80"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_person_24">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameText"
        android:background="@color/white"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_emailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_name"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.80"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email_24"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailIdText"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_emailId"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintWidth_percent="0.80"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_phone_android_24">
    <com.google.android.material.textfield.TextInputEditText
        android:inputType="phone"
        android:id="@+id/phoneNumberText"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout_password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_phoneNumber"
        app:layout_constraintVertical_bias="0.098"
        app:layout_constraintWidth_percent="0.80"
        app:startIconDrawable="@drawable/baseline_lock_24">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/signupProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="5dp"
        android:minHeight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout_password"
        app:layout_constraintVertical_bias="0.298"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>