<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="16dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar_text_view"
                android:layout_width="0dp"
                app:queryHint="Search"
                android:background="@drawable/round_corner"
                android:layout_height="40dp"
                app:layout_constraintWidth_percent="0.5"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/locationIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:iconifiedByDefault="false">
            </androidx.appcompat.widget.SearchView>

            <TextView
                android:id="@+id/locationTextView"
                android:text="@string/all_location"
                android:textColor="#FFEB3B"
                android:textStyle="bold|italic"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.3"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_lock_24"
                app:layout_constraintBottom_toBottomOf="@id/search_bar_text_view"
                app:layout_constraintStart_toEndOf="@id/locationIcon"
                android:layout_marginStart="15dp"/>

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/locationTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_location_on_24"
                app:tint="@color/white"
                app:layout_constraintStart_toEndOf="@id/search_bar_text_view"
                app:layout_constraintBottom_toBottomOf="@id/search_bar_text_view"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_image"
                app:layout_constraintTop_toBottomOf="@id/search_bar_text_view" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/emailIdText"
                app:layout_constraintTop_toBottomOf="@id/search_bar_text_view"
                app:srcCompat="@drawable/profile"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/categoryText"/>

            <TextView
                android:id="@+id/emailIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:splitMotionEvents="false"
                android:id="@+id/categories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryText"
                app:layout_constraintVertical_bias="0.15"
               />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/turf_recycler_view"
                android:splitMotionEvents="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/venueText"
                android:layout_marginTop="10dp"
                app:layout_constraintVertical_bias="0"
                />

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="#00BCD4"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintTop_toBottomOf="@id/emailIdText"
               android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/venueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                android:textColor="#00BCD4"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintTop_toBottomOf="@id/categories_recycler_view"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>